Se agregan y actualizan formularios

--- a/Forms/FormReviews.resx
+++ b/Forms/FormReviews.resx
@@ -129,36 +129,10 @@
   <metadata name="ColumnType.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="ColumnGenre.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="ColumnImdbRating.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBoxSearchIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAeFJREFUSEvtlbtKA0EUhmMQUgpBbZRYWKWIrYgvkAsokncIqcwTqIWV4ANYWFlp
-        460MpBULQQS1tbW28ALi+v07Z4JKNJPERIt88EE4M/+c3dnNbGLIvyOKoiRmcAFzmLah/kCDWdzBe/zI
-        G15gDVM2vXdYbATX8AXbcYfzFu0eFlHTPa1ovOIRVrCAy7iBN+h5wqIt0R0soDv1XGPOhj5BXc+9is8o
-        HjBrw51BUM/Ub6+ajtnQtzAnj9oVUbdyZxDUiyS0UMs7bQVzt+OUo7PnTUBb59/eYysHwfxJ9He9ZeUw
-        CMy4XEzFysGQOXfRqGGlMAjMu1xM3srBkNl30ejWSmEQmHO5mBUrB0Pm1EWjSyuFQSCNOpHEupWDIaOD
-        RBxZKRxCOgaFDoekldvC3MU45ahZORyFXDamauUfYd4onsWJKHrEcRsKh1AK/ZbpRCrYUEsYV9NdTTY2
-        bahzCOvt1tkr9N/U4TBhw02oaXv9nXrKNtwdLFBEnb0eXYD+pwd4gn5XvqJdKtky3cECWaxrtR/QM93E
-        MvqPRe/NBYto67ewgbd4hYe4is0Xid8l/N3modBMXyr/fugrt2RD/Ydmf9r847brIqZtqP/QTM3VVBeQ
-        sfJgoOEUDu5uh3wmkXgHhsoJvZYiBZsAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="labelErrorMessage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAUZJREFUOE/Vkz1Ow0AQhZcCKhqEIqTs7khBgiIFFCkoKOEEXAAKaoqk4gY0OQUU
-        wBUSO0gpoOAESDS0IGhpwLyJnx0TL2BTwZM+KfHM9/yT2Pz/RNZuRt7fKENrN3j4d7lstxdi5+5j75MJ
-        +KzHOK4fFPTysildjutlLLIE+WmmLImcex40m8tcqx6I/bzE+welUNrnWrUMRFZxu69Zwci5QyX7rjPd
-        4frPgXCRy1ro/YFSPIarPOf694mt3cLtvRflYKHuiGxT+zo487goKqFCBaXXiTFzVMvBn3hvViJdUpqp
-        Q/1zbjudeZzxLiSBN1KaqaMua6bB8zgKCQqkU3AWmk2Ay5o0o0ZjEcJjcDllP/QMM9TVDtahUGQ3tFgL
-        kR3WGTNstVbw674EFyugrnawLg3ez3Vc+jGGJ7WAc2XtGmv+fIz5AB5LUtuQRKaaAAAAAElFTkSuQmCC
-</value>
-  </data>
+  <metadata name="ColumnComments.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
