--- a/Forms/FormMediaPriority.resx
+++ b/Forms/FormMediaPriority.resx
@@ -117,4 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAK5JREFUOE/NkkEOgzAMBNNr+VeF4GFwok92x7EtiFAI6YmRLOL12iSE9FxE5E18
+        PG2CdyQGT3cQJ0L5ulRFPWaVyaUSCovVs/HlcgH6mh2tF2KoDiO/NyTAeBrGs29IoA3Wl5+x3rzcB42x
+        M6VvJ0dojuMo/w3SRuuXzUPpOxoNpw/LuvlrFGCq3g7avWEUm1dM7XoY4pzLF0MC9ZhVZpd2EAdi9LSJ
+        erXH08eR0g+bayVm6Dq59AAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
